# rs_ws_playground

./: Cargo.toml
src/: error.rs  main.rs
src/web_layer/: routes_login.rs
tests/: test.txt  test_ws.rs
