[package]
name = "crud_api_playground"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "~0.7.1", features = ["tokio", "http1"]} # Web framework
hyper = { version = "~1.0.1", features = ["full"] } # HTTP library.
tokio = { version = "~1.34.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
tower = { version =  "~0.4.13" } # Modular reusable components for building clients and servers.
serde = { version = "~1.0.193", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "~1.0.108" } # Serde serializion/deserialization of JSON data.
once_cell = { version = "~1.18.0" } # Single assignment cells and lazy values.
base64 = { version = "~0.21.5" } # Encode and decode base64 as bytes or utf8.
http = { version = "~1.0.0" } # Types for HTTP requests and responses.
tracing = { version = "~0.1.40" } #  Application-level tracing for Rust.
tracing-subscriber = { version = "~0.3.18", features = ["env-filter"] } # Utilities for implementing and composing `tracing` subscribers. 
httpc-test = "0.1.1"
anyhow = "1.0"

